--- a/resources/views/layouts/footer/_main_footer.antlers.html
+++ b/resources/views/layouts/footer/_main_footer.antlers.html
@@ -1,5 +1,5 @@
 <footer class="bg-dark text-white  px-6 pt-12 pb-24 relative">
-    <div class="grid grid-cols-1 md:grid-cols-3 space-y-4">
+    <div class="grid grid-cols-1 lg:grid-cols-3 space-y-4 lg:space-y-0">
     {{ footer }}
 
     <!--    Address Column -->
@@ -20,7 +20,7 @@
 
     <!--    Socials Column -->
 
-    <div class="flex space-x-2 md:justify-end">
+    <div class="flex space-x-2 lg:justify-center 2xl:justify-end">
         {{ social }}
         {{ social_media }}
         <a href="{{social_link}}"><img src="{{social_image}}" alt="{{social_alt}}"></a>
