--- a/resources/views/layouts/hero/_hero.antlers.html
+++ b/resources/views/layouts/hero/_hero.antlers.html
@@ -4,11 +4,11 @@
 <!--    <img src="{{ glide:hero_image width="1280" height="900" fit="crop_focal" absolute="true" }}" alt=""/>-->
     <img class="absolute w-full h-full object-cover" src="{{glide:hero_image fit='crop_focal'}}" alt="">
     <div class="absolute w-full h-full bg-black bg-opacity-20" alt=""></div>
-    <img id="hero-tri" class="absolute hidden md:block -bottom-[50rem] -right-[10.5rem]" src="/assets/imgs/hero_triangle.svg" alt="">
+    <img id="hero-tri" class="absolute hidden md:block transition-transform md:animate-mdTriSlide lg:animate-lgTriSlide xl:animate-xlTriSlide 2xl:animate-2xlTriSlide -bottom-[55rem] -right-[10.5rem] z-101" src="/assets/imgs/hero_triangle.svg" alt="">
 
-    <div class="absolute top-1/4 md:top-1/2 w-10/12 pl-4 md:pl-48 flex flex-col justify-center text-white ">
-        <div class="z-102 text-5xl leading-tight">{{hero_title}}</div>
-        <div class="z-102 text-xl pt-3">{{hero_content}}</div>
+    <div class="absolute top-1/4 md:top-1/3 lg:top-1/4 xl:top-1/2 w-10/12 pl-6 lg:pl-48 flex flex-col justify-center text-white ">
+        <div class="z-102 text-5xl leading-tight lg:w-9/12">{{hero_title}}</div>
+        <div class="z-102 text-xl pt-3 lg:pt-36 xl:pt-3">{{hero_content}}</div>
         <div class="z-102 pt-[2.5rem]">{{ partial:layouts/fieldsets/rounded_button}}</div>
     </div>
     {{ /hero_data.0 }}
