--- a/resources/views/layouts/navigation/_main_nav.antlers.html
+++ b/resources/views/layouts/navigation/_main_nav.antlers.html
@@ -1,5 +1,5 @@
-<nav class="h-navbar flex justify-between items-center text-dark px-6 md:px-24 text-3xl z-100 bg-white w-full">
-    <div class="flex items-center md:pl-24">confluence <span><img class="h-8 pl-3" src="/assets/logos/company_logo.svg" alt=""></span></div>
+<nav class="h-navbar flex justify-between items-center text-dark px-6 lg:px-24 text-3xl z-100 bg-white w-full">
+    <a href="/" class="flex items-center lg:pl-24">confluence <span><img class="h-8 pl-3" src="/assets/logos/company_logo.svg" alt=""></span></a>
 
 
 
