--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -11,8 +11,8 @@
 <!-- Mission -->
 <div class="bg-dark text-white panel-size flex flex-col space-y-4">
     <div class="block-heading">{{mission_heading}}</div>
-    <div class="block-content">{{mission_subheading}}</div>
-    <div class="pb-4">{{mission_text | nl2br}}</div>
+    <div class="block-subheading">{{mission_subheading}}</div>
+    <div class="block-content pb-4">{{mission_text | nl2br}}</div>
 </div>
 
 
@@ -20,8 +20,8 @@
 
 <div class="bg-white text-dark panel-size flex flex-col space-y-4">
     <div class="block-heading">{{track_heading}}</div>
-    <div class="pb-4">{{track_content | nl2br}}</div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 space-y-4 space-x-2 mx-auto xl:mx-0">
+    <div class="block-content pb-4">{{track_content | nl2br}}</div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 space-y-4 md:space-y-0 space-x-2 mx-auto xl:mx-0">
         {{ stats }}
         {{ partial:layouts/fieldsets/tracking_stats }}
         {{ /stats }}
@@ -35,7 +35,7 @@
         <img class="z-10" src="{{more_image}}" alt="">
         <div class="absolute hidden md:rotate-[270deg]lg:block top-0 right-0  z-1"><img src="/assets/imgs/quarter.svg" alt=""></div>
     </div>
-    <div class="flex flex-col space-y-4 p-12">
+    <div class="flex flex-col space-y-4 px-6 lg:p-12">
         <div class="block-heading">{{more_heading}}</div>
         <div class="">{{more_content}}</div>
         <div class="z-10 pt-[2.5rem]">{{ partial:layouts/fieldsets/rounded_button}}</div>
