--- a/resources/views/layouts/fieldsets/_rounded_button.antlers.html
+++ b/resources/views/layouts/fieldsets/_rounded_button.antlers.html
@@ -1,1 +1,5 @@
-<a href="{{button_link}}" class="bg-lime text-dark px-16 py-3 rounded-full">{{ button_text }}</a>
+<button
+    class="bg-lime text-dark px-16 py-3 rounded-full transform-gpu transition duration-1000 hover:-translate-y-2 shadow-2xl shadow-dark-lime">
+    <a href="{{button_link}}">{{ button_text }}</a>
+
+</button>
