--- a/resources/views/layouts/fieldsets/_tracking_stats.antlers.html
+++ b/resources/views/layouts/fieldsets/_tracking_stats.antlers.html
@@ -2,6 +2,6 @@
     <img src="{{stat_icon}}" alt="">
     <div class="col-span-2 flex flex-col ml-2">
         <div class="font-cir-bold text-4xl">{{ stat_figure }}</div>
-        <div class="font-be-semi-bold text-sm">{{ stat_description }}</div>
+        <div class="font-be-semi-bold text-sm stat-desc">{{ stat_description }}</div>
     </div>
 </div>
