--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -462,10 +462,42 @@ Ensure the default browser behavior of the `hidden` attribute.
     src: url("/fonts/Rota-Bold.otf") format("opentype");
 }
 
-.block-heading {
+.block-heading, .footer-heading {
   font-family: cir-bold;
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.block-heading:after, .stat-desc:after {
+    content: " ";
+    display: block;
+    width: 4rem;
+    height: 6px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    background: #03FC96;
+    background: linear-gradient(270deg, #03FC96, #0FBAA9, #0BE3A0,  #03FC96);
+    background-size: 200%;
+    -webkit-animation: move-background 3s linear infinite;
+            animation: move-background 3s linear infinite;
+}
+
+@-webkit-keyframes move-background {
+    0% {
+        background-position: 0%;
+    }
+    100% {
+        background-position: 200%;
+    }
+}
+
+@keyframes move-background {
+    0% {
+        background-position: 0%;
+    }
+    100% {
+        background-position: 200%;
+    }
 }
 
 .block-subheading {
@@ -505,30 +537,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     opacity: 1;
     right: 0;
 
-}
-
-#chat {
-    z-index: 100;
-    -webkit-animation: chatslide 2s 3s ease-in-out forwards;
-            animation: chatslide 2s 3s ease-in-out forwards;
-}
-
-@-webkit-keyframes chatslide {
-    0% {
-        right: -20rem;
-    }
-    100% {
-        right: -10.5rem;
-    }
-}
-
-@keyframes chatslide {
-    0% {
-        right: -20rem;
-    }
-    100% {
-        right: -10.5rem;
-    }
 }
 
 #topCornerImage {
@@ -789,6 +797,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 100;
 }
 
+.z-1000 {
+  z-index: 1000;
+}
+
 .z-102 {
   z-index: 102;
 }
@@ -895,6 +907,33 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .transform-gpu {
   transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@-webkit-keyframes chat {
+
+  0% {
+    right: -20rem;
+  }
+
+  100% {
+    right: -10.5rem;
+  }
+}
+
+@keyframes chat {
+
+  0% {
+    right: -20rem;
+  }
+
+  100% {
+    right: -10.5rem;
+  }
+}
+
+.animate-chat {
+  -webkit-animation: chat 2s 3s ease-in-out forwards;
+          animation: chat 2s 3s ease-in-out forwards;
 }
 
 .cursor-pointer {
@@ -1033,13 +1072,31 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 0.2;
 }
 
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-dark-lime {
+  --tw-gradient-from: #0FBAA9;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(15 186 169 / 0));
+}
+
+.via-lime {
+  --tw-gradient-stops: var(--tw-gradient-from), #03FC96, var(--tw-gradient-to, rgb(3 252 150 / 0));
+}
+
+.to-dark-lime {
+  --tw-gradient-to: #0FBAA9;
+}
+
+.bg-clip-text {
+  -webkit-background-clip: text;
+          background-clip: text;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.p-12 {
-  padding: 3rem;
 }
 
 .p-24 {
@@ -1052,6 +1109,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .px-48 {
@@ -1087,11 +1149,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .pb-4 {
@@ -1225,10 +1282,54 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 0.75;
 }
 
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-dark-lime {
+  --tw-shadow-color: #0FBAA9;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-transform {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.hover\:-translate-y-2:hover {
+  --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:text-transparent:hover {
+  color: transparent;
 }
 
 .hover\:text-lime:hover {
@@ -1292,6 +1393,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1312,10 +1419,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 
     0% {
       bottom: -50rem;
+      right: -14.5rem;
     }
 
     100% {
       bottom: -35rem;
+      right: -14.5rem;
     }
   }
 
@@ -1323,10 +1432,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 
     0% {
       bottom: -50rem;
+      right: -14.5rem;
     }
 
     100% {
       bottom: -35rem;
+      right: -14.5rem;
     }
   }
 
@@ -1347,6 +1458,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .lg\:p-12 {
+    padding: 3rem;
   }
 
   .lg\:px-24 {
@@ -1424,6 +1539,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .xl\:pt-3 {
     padding-top: 0.75rem;
   }
@@ -1443,7 +1563,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     }
 
     100% {
-      bottom: -25rem;
+      transform: translateY(-30rem);
     }
   }
 
@@ -1454,7 +1574,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     }
 
     100% {
-      bottom: -25rem;
+      transform: translateY(-30rem);
     }
   }
 
@@ -1465,6 +1585,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .\32xl\:justify-end {
     justify-content: flex-end;
+  }
+
+  .\32xl\:px-48 {
+    padding-left: 12rem;
+    padding-right: 12rem;
+  }
+
+  .\32xl\:pl-56 {
+    padding-left: 14rem;
   }
 }
 
