--- a/resources/views/layouts/cta/chat.antlers.html
+++ b/resources/views/layouts/cta/chat.antlers.html
@@ -1,3 +1,3 @@
-<a href="/contact" id="chat" class="fixed top-1/2 right-[-20rem]">
+<a href="/contact" id="chat" class="fixed hidden md:block top-1/2 right-[-20rem] animate-chat z-1000">
     <img src="/assets/imgs/chat.svg" alt="">
 </a>
