--- a/resources/views/layouts/navigation/_main_nav.antlers.html
+++ b/resources/views/layouts/navigation/_main_nav.antlers.html
@@ -1,5 +1,5 @@
 <nav class="h-navbar flex justify-between items-center text-dark px-6 lg:px-24 text-3xl z-100 bg-white w-full">
-    <a href="/" class="flex items-center lg:pl-24">confluence <span><img class="h-8 pl-3" src="/assets/logos/company_logo.svg" alt=""></span></a>
+    <a id="homelink" href="/" class="flex items-center lg:pl-24"><span class="bg-clip-text hover:text-transparent bg-gradient-to-r from-dark-lime via-lime to-dark-lime transition-colors duration-200">confluence </span><span><img class="h-8 pl-3" src="/assets/logos/company_logo.svg" alt=""></span></a>
 
 
 
