--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -36,7 +36,7 @@
 }
 
 
-.block-heading, .footer-heading {
+.block-heading, .footer-heading, .contact-heading, .alt-block-heading {
     @apply text-4xl font-cir-bold;
 }
 
@@ -49,6 +49,19 @@
     margin-bottom: 10px;
     background: theme('colors.lime');
     background: linear-gradient(270deg, theme('colors.lime'), theme('colors.dark-lime'), theme('colors.alt-lime'),  theme('colors.lime'));
+    background-size: 200%;
+    animation: move-background 3s linear infinite;
+}
+
+.alt-block-heading:after {
+    content: " ";
+    display: block;
+    width: 4rem;
+    height: 6px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    background: theme('colors.lime');
+    background: linear-gradient(270deg, theme('colors.lime'), theme('colors.white'), theme('colors.white'),  theme('colors.lime'));
     background-size: 200%;
     animation: move-background 3s linear infinite;
 }
@@ -98,8 +111,8 @@
 }
 
 #topCornerImage {
-    animation: topCornerImage 2s 1s ease-in-out forwards;
-    visibility: hidden;
+    /*animation: topCornerImage 2s 1s ease-in-out forwards;*/
+    /*visibility: hidden;*/
 }
 
 @keyframes topCornerImage {
@@ -123,8 +136,8 @@
 
 
 #bottomCornerImage {
-    animation: bottomCornerImage 2s 1s ease-in-out forwards;
-    visibility: hidden;
+    /*animation: bottomCornerImage 2s 1s ease-in-out forwards;*/
+    /*visibility: hidden;*/
 
 }
 
@@ -140,4 +153,18 @@
 
 .panel-size {
     @apply px-6 py-10  lg:px-24 lg:py-12 xl:px-20 xl:py-20  2xl:px-48 2xl:py-24
+}
+
+#more-jag {
+    animation: rotateJag 2s 3s ease-in-out backwards;
+}
+
+@keyframes rotateJag {
+    from {
+        transform-origin: left;
+        transform: rotate(180deg);
+    }
+    to {
+        transform-origin: left;
+    }
 }
